# notiondipity-backend

./: .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  scripts.py
notiondipity_backend/: app.py  auth.py  config.py  embeddings.py  main.py  notion.py  scripts.py  utils.py
notiondipity_backend/api/: auth.py  embeddingsdb.py  ideas.py  recommend.py
notiondipity_backend/resources/: comparison.py  embeddings.py  gpt.py  last_updated.py  notion.py
notiondipity_backend/resources/gpt/: comparisons.py  prompts.yaml  utils.py
notiondipity_backend/services/: comparison.py  similar_pages.py
notiondipity_backend/services/comparisons/: __init__.py  cache.py  comparison.py  generator.py
notiondipity_backend/services/ideas/: __init__.py  cache.py  generator.py  idea.py
scripts/: proxy.sh
sql/: create_tables.sql  drop_tables.sql  postgres.dockerfile  test_data.sql
tests/: base.py  test_auth.py  test_embeddings.py  test_ideas.py  test_recommend.py
tests/data/: long_text.md  page_lexical_resources.md  page_sources_of_time.md  page_the_crumbling_of_time.md  page_working_with_arbitrary_sources.md  page_world_without_time.md
