[tool.poetry]
name = "notion-backend"
version = "0.6.0"
description = ""
authors = ["Milos Svana <milos.svana@gmail.com>"]
readme = "README.md"
packages = [{ include = "notiondipity_backend" }]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.28.2"
openai = "^0.27.2"
numpy = "^1.24.2"
flask = "^2.2.3"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = {extras = ["gevent"], version = "^21.2.0"}
pyjwt = "^2.7.0"
pycryptodome = "^3.18.0"
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
id-hash = "scripts:user_id_to_hash"