[tool.poetry]
name = "notion-backend"
version = "0.6.0"
description = ""
authors = ["Milos Svana <milos.svana@gmail.com>"]
readme = "README.md"
packages = [{ include = "notiondipity_backend" }]

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.28.2"
openai = "~0.28"
numpy = "^1.24.2"
flask = "^3.0.0"
gunicorn = { extras = ["gevent"], version = "^21.2.0" }
pyjwt = "^2.7.0"
pycryptodome = "^3.18.0"
tiktoken = "^0.5.0"
psycopg = { extras = ["pool"], version = "^3.1.10" }
gevent = "^23.9.1"
quart = "^0.19.2"
quart-cors = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"